ui/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-applied-demo-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-applied-demo-ui
  template:
    metadata:
      labels:
        app: ai-applied-demo-ui
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 2000
        fsGroup: 2000
        fsGroupChangePolicy: "OnRootMismatch"
      restartPolicy: Always
      containers:
      - name: ai-applied-demo-ui
        image: grick8s/ai-applied-demo-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
