ui/kustomize/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ai-applied-demo-ui-service
  labels:
    app: ai-applied-demo-ui
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: ai-applied-demo-ui
